--- a/config/collector.yaml
+++ b/config/collector.yaml
@@ -20,7 +20,7 @@ common:
   seed: null # TODO
 
 collection:
-  num_envs: 8  # For static data: nb of envs in parallel
+  num_envs: 8  # For crafter static data: nb of envs in parallel
   num_steps_total: 10000
   
 cache_in_ram: False
